// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InputText /> renders the component disabled 1`] = `
.c0 {
  border: 2px solid #D4D7D9;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  -webkit-appearance: none;
  outline: none;
}

.c0:focus {
  border: 2px solid #3B46C4;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #EFEFEF;
}

<input
  class="c0"
  disabled=""
  name="name"
/>
`;

exports[`<InputText /> renders the component with error 1`] = `
.c0 {
  border: 2px solid #FF4539;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  -webkit-appearance: none;
  outline: none;
}

.c0:focus {
  border: 2px solid #3B46C4;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #EFEFEF;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with focus 1`] = `
.c0 {
  border: 2px solid #D4D7D9;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  -webkit-appearance: none;
  outline: none;
}

.c0:focus {
  border: 2px solid #3B46C4;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #EFEFEF;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with isValid set as true 1`] = `
.c0 {
  border: 2px solid #3EBC64;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  -webkit-appearance: none;
  outline: none;
}

.c0:focus {
  border: 2px solid #3B46C4;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #EFEFEF;
}

<input
  class="c0"
  name="name"
/>
`;

exports[`<InputText /> renders the component with the required props 1`] = `
.c0 {
  border: 2px solid #D4D7D9;
  border-radius: 4px;
  padding: 0 10px;
  height: 48px;
  font-weight: 600;
  width: 100%;
  -webkit-appearance: none;
  outline: none;
}

.c0:focus {
  border: 2px solid #3B46C4;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

.c0::-webkit-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::-moz-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:-ms-input-placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0::placeholder {
  color: #D4D7D9;
  opacity: 1;
}

.c0:disabled {
  background-color: #EFEFEF;
}

<input
  class="c0"
  name="name"
/>
`;
